--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
 
       </div>
       <div class="middle-right mt-md-3 col-md-6 text-right">
-          <h6><span class="fa fa-phone"></span> Order Now : 123456789</h6>
+          <h6><span class="fa fa-phone"></span> Order Now : 1-800-400-000</h6>
       </div>
   </div>
 </div>
@@ -42,7 +42,7 @@ section class="banner-bottom-wthree py-5" id="about">
             <div class="row banner-grids">
                 <div class="col-md-6 content-left-bottom text-left pr-lg-5">
                     <h4>TRIPLE HAMBURGER WITH CHEESE MEAL</h4>
-                    <p class="mt-2 text-left">Integer pulvinar leo id viverra feugiat.<strong class="text-capitalize"> Pellentesque libero justo, semper at tempus vel, ultrices in sed ligula. Nulla uter sollicitudin velit.</strong> Sed porttitor orci vel fermentum elit maximus. Curabitur ut turpis massa in condimentum libero. Pellentesque maximus Pellentesque libero justo Nulla uter sollicitudin velit. Sed porttitor orci vel ferm semper at vel, ultrices in ligula semper at vel.Curabitur ut turpis massa in condimentum libero.</p>
+                    <p class="mt-2 text-left">Try this weeks IMeal promo meal.<strong class="text-capitalize"> TRIPLE HAMBURGER WITH CHEESE MEAL.</strong> It's a good value meal ,A BLT hamburger served with a side of regular fries and a can of your soft drink beverage choice .</p>
 
                 </div>
                 <div class="col-md-6 content-right-bottom text-left">
@@ -56,7 +56,7 @@ section class="banner-bottom-wthree py-5" id="about">
     <section class="services py-5" id="services">
         <div class="container py-md-5">
             <div class="header pb-lg-3 pb-3 text-center">
-                <h3 class="tittle two mb-lg-3 mb-3">What kind of Foods we serve for you</h3>
+                <h3 class="tittle two mb-lg-3 mb-3">Try our customers favourite Dishes</h3>
             </div>
             <div class="row ab-info mt-lg-4">
                 <div class="col-lg-3 ab-content">
@@ -64,7 +64,7 @@ section class="banner-bottom-wthree py-5" id="about">
                         <img src="images/1.jpg" alt="news image" class="img-fluid">
                         <div class="ab-info-con">
                             <h4>Delicious sandwich</h4>
-                            <p>$5.99</p>
+                            <p>KES250</p>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@ section class="banner-bottom-wthree py-5" id="about">
                         <img src="images/2.jpg" alt="news image" class="img-fluid">
                         <div class="ab-info-con">
                             <h4>Humburger & Chips</h4>
-                            <p>$10.99</p>
+                            <p>KES450</p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@ section class="banner-bottom-wthree py-5" id="about">
                         <img src="images/3.jpg" alt="news image" class="img-fluid">
                         <div class="ab-info-con">
                             <h4>Two burgers for one</h4>
-                            <p>$25.99</p>
+                            <p>KES800</p>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@ section class="banner-bottom-wthree py-5" id="about">
                         <img src="images/4.jpg" alt="news image" class="img-fluid">
                         <div class="ab-info-con">
                             <h4>Veg Muffin</h4>
-                            <p>$28.99</p>
+                            <p>KES300</p>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@ section class="banner-bottom-wthree py-5" id="about">
     <section class="mid-sec py-5" id="menu">
         <div class="container-fluid py-lg-5">
             <div class="header pb-lg-3 pb-3 text-center">
-                <h3 class="tittle mb-lg-3 mb-3">Bigger & Bolder</h3>
+                <h3 class="tittle mb-lg-3 mb-3">HUNGRY?</h3>
             </div>
             <div class="middile-inner-con">
                 <div class="tab-main mx-auto text-center">
@@ -124,7 +124,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/5.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Bacon Burger</h4>
-                                        <p class="price">$5.99</p>
+                                        <p class="price">KES240</p>
                                     </div>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/6.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Cheese Butter</h4>
-                                        <p class="price">$15.99</p>
+                                        <p class="price">KES180</p>
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/7.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Delicious sandwich</h4>
-                                        <p class="price">$25.99</p>
+                                        <p class="price">KES320</p>
                                     </div>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/6.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Delicious sandwich</h4>
-                                        <p class="price">$35.99</p>
+                                        <p class="price">KES400</p>
                                     </div>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/8.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Pene Salmone</h4>
-                                        <p class="price">$5.99</p>
+                                        <p class="price">KES150</p>
                                     </div>
                                 </div>
                             </div>
@@ -177,7 +177,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/9.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Cheese Butter</h4>
-                                        <p class="price">$15.99</p>
+                                        <p class="price">KES200/p>
                                     </div>
                                 </div>
                             </div>
@@ -186,7 +186,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/7.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Bolognese Pasta</h4>
-                                        <p class="price">$25.99</p>
+                                        <p class="price">KES350</p>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/10.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Tagliatelle Molto</h4>
-                                        <p class="price">$35.99</p>
+                                        <p class="price">KES180</p>
                                     </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/11.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Cola Bottle</h4>
-                                        <p class="price">$5.99</p>
+                                        <p class="price">KES70</p>
                                     </div>
                                 </div>
                             </div>
@@ -219,7 +219,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/12.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Fresh Lime</h4>
-                                        <p class="price">$15.99</p>
+                                        <p class="price">KES120</p>
                                     </div>
                                 </div>
                             </div>
@@ -228,7 +228,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/11.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Cola Bottle</h4>
-                                        <p class="price">$25.99</p>
+                                        <p class="price">KES99</p>
                                     </div>
                                 </div>
                             </div>
@@ -237,7 +237,7 @@ section class="banner-bottom-wthree py-5" id="about">
                                     <img src="images/12.jpg" alt="news image" class="img-fluid">
                                     <div class="ab-info-con">
                                         <h4>Kiwi Smoothie</h4>
-                                        <p class="price">$35.99</p>
+                                        <p class="price">KES150</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,30 +258,30 @@ section class="banner-bottom-wthree py-5" id="about">
 
                 <div class="row mt-lg-4 mt-3">
                     <div class="col-md-6 order-left-content text-right">
-                        <h4>$99</h4>
+                        <h4>KES450</h4>
                     </div>
                     <div class="col-md-6 order-right-content text-left">
                         <ul class="tic-info list-unstyled">
                             <li>
 
-                                <span class="fa fa-long-arrow-right mr-2"></span> Integer sit amet mattis quam
+                                <span class="fa fa-long-arrow-right mr-2"></span> TRIPLE HAMBURGER
 
                             </li>
                             <li>
 
-                                <span class="fa fa-long-arrow-right mr-2"></span> Praesent ullamcorper dui turpis
+                                <span class="fa fa-long-arrow-right mr-2"></span> Regular Fries
 
                             </li>
                             <li>
 
-                                <span class="fa fa-long-arrow-right mr-2"></span> Integer sit amet mattis quam
+                                <span class="fa fa-long-arrow-right mr-2"></span> Soft drink & Coleslaw
 
                             </li>
 
                         </ul>
                     </div>
                     <div class="read-more mx-auto text-center">
-                        <a href="#contact" class="read-more scroll">Read More </a> </div>
+                        <a href="#contact" class="read-more scroll">Order Now </a> </div>
                 </div>
             </div>
         </div>
@@ -382,7 +382,7 @@ section class="banner-bottom-wthree py-5" id="about">
                             </a>
                         </li>
                     </ul>
-                    <p><span class="fa fa-quote-left"></span> Lorem Ipsum has been the industry's standard since the 1500s. Praesent ullamcorper dui turpis.Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem, at molestie arcu pulvinar ut. <span class="fa fa-quote-right"></span></p>
+                    <p><span class="fa fa-quote-left"></span> IMEALS has always been my go to Catering service and with the online platform it is now easier than ever to order food, If you want high standards while keeping the budget this is the one place. You won't be dissapointed <span class="fa fa-quote-right"></span></p>
 
                 </div>
             </div>
@@ -430,8 +430,8 @@ section class="banner-bottom-wthree py-5" id="about">
                         </div>
                         <div class="col-md-9 text-left">
                             <h6>Location</h6>
-                            <p>The company name
-                                <br>New York City. </p>
+                            <p>Imeals.ltd
+                                <br>Nairobi. </p>
                         </div>
                     </div>
                 </li>
@@ -475,9 +475,9 @@ section class="banner-bottom-wthree py-5" id="about">
                         <h2>
                             <a href="index.html"><span class="fa fa-align-center" aria-hidden="true"></span>HB</a>
                         </h2>
-                        <p class="my-3">Donec consequat sam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</p>
+                        <p class="my-3">,IMEALS,opened its first store in 1999 in Nairobi. With the aim of introducing up to Standard catering services  in Kenya</p>
                         <p>
-                            Id quod possimusapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci.
+                          In the recent years the brand has evolved and now we have a much more convenient way of Ordering food at your own convenience
                         </p>
                     </div>
                     <div class="col-lg-4 col-md-6 mt-md-0 mt-5">
@@ -508,23 +508,23 @@ section class="banner-bottom-wthree py-5" id="about">
                             <hr>
                             <div class="last-w3ls-contact">
                                 <p>
-                                    <a href="mailto:example@email.com">info@example.com</a>
+                                    <a href="mailto:imeal@gmail.com">imeal@gmail.com</a>
                                 </p>
                             </div>
                             <div class="last-w3ls-contact my-2">
                                 <p>+ 456 123 7890</p>
                             </div>
                             <div class="last-w3ls-contact">
-                                <p>+ 90 nsequursu dsdesdc,
-                                    <br>xxx Honey State 049436.</p>
+                                <p>+ check out our Insta,
+                                    <br> Nairobi.</p>
                             </div>
                         </div>
                     </div>
 
                 </div>
 
-                <p class="copy-right-grids text-li text-center my-sm-4 my-4">© 2019 Humburger. All Rights Reserved | Design by
-                    <a href="http://w3layouts.com/"> W3layouts </a>
+                <p class="copy-right-grids text-li text-center my-sm-4 my-4">© 2020 Humburger. All Rights Reserved | Design by
+                    <a href="/"> Moringa Cypher </a>
                 </p>
                 <div class="w3ls-footer text-center mt-4">
                     <ul class="list-unstyled w3ls-icons">
